--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/jmorales113/Chat-App#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.6"
   }
 }
